# sentinel

./: .gitignore  .project  .travis.yml  README.md  Sentinel.cabal  user instruction.txt
scripts/: .emacs  .profile  Authors.txt  CompileSentinel.php  RunSentinel.php  TestSpecs.txt  ampersand  buildSentinel  cleanSentinel  configureSentinel  crontabRunSentinel  crontabRunSentinelTest  hbuild  hbuildrun  hclean  hconfigure  hrun  phpCompileSentinel  phpFetchAllRepos  phpKillAndRunSentinel  phpMartijnCompileSentinel  phpMartijnRunSentinel  phpRootCompileSentinel  phpRootRunSentinel  phpSentinelCompileSentinel  phpSentinelRunSentinel  prototype  runSentinel  sentinel.html  syncCleanRunSentinel  syncSentinel  updateCleanRunSentinel  updateSentinel  win-publish-exe.sh  win-sentinel-publish-executable  win-update-publish-exe.sh  zcp
src/: Defaults.hs  Execute.hs  Main.hs  Test.hs  TestSpecs.hs  Types.hs  UTF8.hs  Utils.hs
www/: .gitignore  Authors.txt  CompileSentinel.php  FetchAllRepos.php  RunSentinel.php  RunSentinelDeleteSandbox.php  RunSentinelKeepSandbox.php  TestSpecs.txt  index.php  sentinel.html  sentinel.php
www/logs/: Sentinel_2012-12-11_17.47.00__20_of_148__Amp=825_Pro=2258_Sen=2256-2259.html  Sentinel_2012-12-12_05.00.01__20_of_148__Amp=825_Pro=2259_Sen=2256-2259.html  Sentinel_2012-12-12_08.43.55__18_of_148__Amp=826_Pro=2259_Sen=2256-2259.html  Sentinel_2012-12-12_11.44.00__16_of_125__Amp=826_Pro=2261_Sen=2256-2261.html  Sentinel_2012-12-12_17.07.03__18_of_125__Amp=827_Pro=2270_Sen=2263-2270.html  Sentinel_2012-12-12_21.41.52__18_of_125__Amp=827_Pro=2270_Sen=2263-2270.html  Sentinel_2012-12-13_05.00.01__18_of_125__Amp=827_Pro=2270_Sen=2263-2270.html  Sentinel_2012-12-14_05.00.01__16_of_123__Amp=827_Pro=2271_Sen=2263-2271.html  Sentinel_2012-12-14_17.24.45__17_of_124__Amp=830_Pro=2272_Sen=2263-2272.html  Sentinel_2012-12-15_05.00.01__17_of_124__Amp=830_Pro=2272_Sen=2263-2272.html  Sentinel_2012-12-16_05.00.01__Aborted__Amp=830_Pro=2273_Sen=2263-2273.html  Sentinel_2012-12-16_07.33.39__17_of_124__Amp=830_Pro=2273_Sen=2263-2273.html  Sentinel_2012-12-17_05.00.01__17_of_124__Amp=830_Pro=2273_Sen=2263-2273.html  Sentinel_2012-12-18_05.00.01__17_of_124__Amp=831_Pro=2273_Sen=2263-2273.html  Sentinel_2012-12-18_23.03.48__76_of_124__Amp=833_Pro=2274_Sen=2263-2274.html  Sentinel_2012-12-19_05.00.01__76_of_124__Amp=833_Pro=2274_Sen=2263-2274.html  Sentinel_2012-12-19_16.24.08__17_of_124__Amp=834_Pro=2274_Sen=2263-2274.html  Sentinel_2012-12-19_16.56.59__17_of_124__Amp=835_Pro=2274_Sen=2263-2274.html  Sentinel_2012-12-19_21.27.17__17_of_124__Amp=836_Pro=2274_Sen=2263-2274.html  (+60 more)
