name:           Sentinel
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         martijn

executable sentinel
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base == 4.7.*,
                   bytestring == 0.10.*,
                   directory == 1.2.*,
                   filepath == 1.3.*,
                   network == 2.6.*,
                   old-locale == 1.0.*,
                   options == 0.1.*,
                   process == 1.2.*,
                   time == 1.4.*,
                   utf8-string == 0.3.*
  ghc-options:     -Wall -threaded
  other-modules:   
                   Defaults,
                   Execute,
                   Test,
                   TestSpecs,
                   Types,
                   UTF8,
                   Utils

