name:           Sentinel
version:        0.3
cabal-version:  >= 1.2
tested-with:    GHC == 7.8.3, GHC == 7.10.1
build-type:     Simple
author:         martijn

executable sentinel
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base == 4.9.*,
                   bytestring == 0.10.*,
                   directory == 1.2.*,
                   filepath == 1.4.*,
                   network == 2.6.*,
                   options >= 1.2 && <1.3,
                   process == 1.4.*,
                   time == 1.6.*,
                   utf8-string == 1.0.*
  ghc-options:     -Wall -threaded
  other-modules:   
                   Defaults,
                   Execute,
                   Test,
                   TestSpecs,
                   Types,
                   UTF8,
                   Utils

